# AstromechAPI

./: Cargo.toml  README.md  astromech_config.json  servo_config.json
.github/workflows/: commit-formatter.yml  rust-format-check.yml
docs/: AstromechAPI.postman_collection.json
routines/: test_routine.json
src/: audio_manager.rs  i2c_manager.rs  lib.rs  main.rs  move_request.rs  pca9685_controller.rs  servo_config.json  servo_info.rs  servo_manager.rs
src/api/: audio_handler.rs  command.rs  handlers.rs  mod.rs  routes.rs
src/config/: mod.rs
src/errors/: hardware_error.rs  mod.rs
src/hardware/: mod.rs
src/hardware/audio/: config.rs
src/hardware/servo/: config.rs  mod.rs  pca9685.rs
src/managers/: audio_manager.rs  mod.rs  routine_manager.rs  servo_manager.rs
src/traits/: hardware.rs  mod.rs
