[package]
name = "AstromechAPI"
version = "0.1.0"
edition = "2021"

[dependencies]
linux-embedded-hal = "0.4.0"
pwm-pca9685 = "1.0.0" # for interacting with the PCA9685 boards
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
actix-web = "4.9.0"


[build]
target = "armv7-unknown-linux-gnueabihf" # Adjust as needed
